# real-world-bazel

./: .gitignore  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  angular.json.bak  package.json  tsconfig.json  tsconfig.json.bak
src/: BUILD.bazel  main.dev.ts  require.config.js  tsconfig.app.json
src/app/: app-routing.module.ts  app.module.dev.ts  app.module.ts
src/app/article/: BUILD.bazel  markdown.pipe.ts
src/app/core/: BUILD.bazel
src/app/editor/: BUILD.bazel
src/app/profile/: BUILD.bazel
src/app/settings/: BUILD.bazel
src/app/shared/: BUILD.bazel  shared.module.ts
src/environments/: BUILD.bazel
