package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "shared",
    srcs = glob(["**/*.ts", "*.ts"]),
    tsconfig = "//src:tsconfig.app.json",
    assets = glob([
      "**/*.css",
      "**/*.html",
    ]) + ([":styles"] if len(glob(["**/*.scss"])) else []),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/common",
        "@npm//@angular/forms",
        "@npm//@types",
        "@npm//marked",
        "//src/app/core"
    ],
)
